frontend/src/index.scss
/* ... */
#root // heavier selector
.file-show {
    backdrop-filter: none; background: #888e; // less GPU, as file-show can stay on for long

    &>div {
        height: 100%;
        width: 100%;
        @media (max-width: 30em) { // portrait mobile
            flex-direction: column-reverse !important; // bar at the bottom, easier on the thumb
        }
    }

    .showing-container {
        width: 100%;
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        position: relative;
    }
    .meta-tags {
        position: relative;
        width: 100%;
        text-align: center;
        display: flex;
        justify-content: center;
        text-shadow: 1px 1px 0 #000, -1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000;
        &>div { position: absolute;
            margin: 1em;
        }
    }
    .showing {
        max-width: calc(100% - 4vw); // fallback
        max-width: calc(100% - min(4vw, var(--nav-size)) * 2); // avoid overlapping of controls and nav buttons
        max-height: 100%;
    }
    .cover {
        position: absolute;
        width: 100%; height: 100%;
        background-repeat: no-repeat;
        background-size: contain;
        background-position: center;
        z-index: -1; // otherwise firefox (forgot to finished this comment)
        opacity: .4;
        transition: opacity 1s;
        &.none { opacity: 0; }
    }
    audio.showing { min-width: 60%; transition: opacity 1s; }
    .cover:not(.none)+audio { opacity: .7; }
    audio.showing, // even on mobile, we need the whole thing to control it decently, and nav-s don't seem to be a problem
    img.showing { max-width: 100% } // we are ok with overlapping for simple images
    .main {
        flex: 1; position: relative; max-height: 100%;
        overflow: hidden; // without this <video> can make me go beyond the screen limit
    }
    .freeY, .fullWidth {
        .main { overflow-y: auto; }
        .showing { max-height: initial; margin: auto; }
        .showing-container { overflow: auto; align-items: flex-start; justify-content: flex-start; }
    }
    .fullWidth {
        .showing-container, .showing { width: 100%; }
    }
    --nav-size: 25vh; // big
    @supports (width: min(1px,2px)) {
        --nav-size: min(25vh, 25vw, 13em);
    }
    .nav {
        position: absolute;
        width: .5em; // closer to the edge
        font-size: var(--nav-size);
        cursor: pointer;
        opacity: .3;
        -webkit-text-stroke: 2px black;
        user-select: none;
        transition: opacity .3s;
        &:hover { opacity: .7; }
        &.nav-hidden:not(:hover) { opacity: .3 }
    }
    .bar {
        padding: .5em; // fallback
        padding: .5em min(2vw, 1em);
        background: var(--bg);
        opacity: .8;
        flex-wrap: wrap;
        &,&>.controls {
            display: flex;
            align-items: center;
            justify-content: flex-end;
            gap: .5em;
        }

        .entry-details { font-size: smaller; margin-left: 1em; }
        .entry-ts { display: inherit; font-size: smaller; }
        .entry-size::after { display: none }
    }
}
.file-show-help {
    kbd { margin: .5em }
    kbd:first-of-type { margin-top: 1em; }
}

@media (min-width: 42em) {
    body {
        /* Works on Firefox */
        scrollbar-width: thin;
        scrollbar-color: var(--button-bg) var(--ghost-contrast);

        /* Works on Chrome, Edge, and Safari */
        &::-webkit-scrollbar {
            width: 12px;
        }
        &::-webkit-scrollbar-track {
            background: var(--ghost-contrast);
        }
        &::-webkit-scrollbar-thumb {
            background-color: var(--button-bg);
            border-radius: 20px;
            border: 1px solid var(--ghost-contrast)
        }
    }
    button { padding: .4em .8em; }
}
@media (max-width: 42em) {
    :root { --ghost-contrast: #8883; } /* phones have different curve */
    body, button, select { font-size: 14pt; }
    #menu-bar, #filter-bar, #clipBar, #search-clear-button {
        .icon + .label { display: none } /* icons only */
    }
    #filter-bar {
        margin-top: 0.4em;
        button { // make it same size of top bar
            width: 17.6vw;
            height: 2.3em;
        }
    }
    .breadcrumb {
        word-break: break-all; // solves with very long names without spaces. 'break-word' is nicer but doesn't handle worst cases like /gear/mininova/x/LOOPMASTERS%204Gig%20Pack/LOOPMASTERS_2015/BASS_HOUSE_AND_GARAGE_2_DEMOS/SOUNDS_AND_FX/
        .icon {
            font-size:24px;
        }
    }
    #root>.tiles-mode {
        margin: 0;
    }
}

@media (max-width: 30em) {
    .upload-list-inline-actions {
        display: none;
    }
    .upload-list-menu-button {
        display: inline-block;
    }
    .upload-list-size {
        display: none;
    }
}

@media (max-height: 600px) and (orientation: landscape) {
    .file-dialog {
        .dialog-content {
            display: flex;
            gap: 3em;
            margin: 1em;
            .file-menu { // move divisor to left
                margin-top: 0;
                padding-top: 0;
                border-top: none;
                margin-left: 2em;
                padding-left: 2em;
                border-left: 1px solid var(--faint-contrast);
            }
        }
    }
}

@media (pointer: coarse) {
    .file-show .nav { height: 1.6em; } // correct centering on android
    #root>.tiles-mode .file-menu-button { font-size: 1em; margin-top: 0.3em; } // easier to tap
}

